improvements on Layout.